@@ -1,6 +1,7 @@
 v1.7.4 (21/07/2020)
 - bug fix: selected results not linked after parsing of auto-processing results
 - enabled updates of message & progress bar during scoring of auto-processing results
+- enabled updates of message & progress bar during DB update of pinIDs
 
 v1.7.3 (20/07/2020)
 - bug fix: ignore large temporary files in get_gda_barcodes which lead to memory errors
